--- a/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
@@ -41,12 +41,12 @@
                     </div>
                     <div class="blog-footer-category">
                         <i class="fa fa-folder-o" aria-hidden="true"></i>
-                        <a href="">{{ post.category.name }}</a>
+                        <a href="{{ path('category', {'id' : post.category.id, 'name' : post.category.name|replace ({' ': '_'})}) }}">{{ post.category.name }}</a>
                     </div>
                     <div class="body-footer-teg">
                         <i class="fa fa-tags" aria-hidden="true"></i>
                         {% for tag in post.tag %}
-                            <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+                            <a href="{{ path('tag', {'id' : tag.id, 'name' : tag.name|replace ({' ': '_'})}) }}">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
                         {% endfor %}
                     </div>
                 </div>
@@ -84,12 +84,12 @@
                     </div>
                     <div class="blog-footer-category">
                         <i class="fa fa-folder-o" aria-hidden="true"></i>
-                        <a href="">{{ post.category.name }}</a>
+                        <a href="{{ path('category', {'id' : post.category.id, 'name' : post.category.name|replace ({' ': '_'})}) }}">{{ post.category.name }}</a>
                     </div>
                     <div class="body-footer-teg">
                         <i class="fa fa-tags" aria-hidden="true"></i>
                         {% for tag in post.tag %}
-                            <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+                            <a href="{{ path('tag', {'id' : tag.id, 'name' : tag.name|replace ({' ': '_'})}) }}">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
                         {% endfor %}
                     </div>
                 </div>
